// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`PublicCollectionHeader rendering tests description defined - test 1`] = `
<div>
  <div
    data-testid="collection-header-public"
  >
    <div
      class="flex items-center gap-5"
      data-testid="overview"
    >
      <div
        class="flex h-14 w-14 shrink-0 items-center justify-center rounded-2xl shadow-sm"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-folder h-7 w-7"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M20 20a2 2 0 0 0 2-2V8a2 2 0 0 0-2-2h-7.9a2 2 0 0 1-1.69-.9L9.6 3.9A2 2 0 0 0 7.93 3H4a2 2 0 0 0-2 2v13a2 2 0 0 0 2 2Z"
          />
        </svg>
      </div>
      <div
        class="min-w-0 flex-1"
      >
        <div
          class="flex flex-wrap items-center gap-2"
        >
          <h1
            class="text-2xl font-bold text-slate-900"
          >
            name 1
          </h1>
          <span
            class="inline-flex items-center justify-center rounded-full border px-2 py-0.5 text-xs font-medium w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden [a&]:hover:bg-accent [a&]:hover:text-accent-foreground gap-1 border-green-300 bg-green-50 text-green-700"
            data-slot="badge"
            data-testid="public-badge"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-globe h-3 w-3"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
              <path
                d="M12 2a14.5 14.5 0 0 0 0 20 14.5 14.5 0 0 0 0-20"
              />
              <path
                d="M2 12h20"
              />
            </svg>
            Öffentlich
          </span>
        </div>
        <p
          class="mt-1.5 text-slate-500"
        >
          description 1
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`PublicCollectionHeader rendering tests description null - test 1`] = `
<div>
  <div
    data-testid="collection-header-public"
  >
    <div
      class="flex items-center gap-5"
      data-testid="overview"
    >
      <div
        class="flex h-14 w-14 shrink-0 items-center justify-center rounded-2xl shadow-sm"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-folder h-7 w-7"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M20 20a2 2 0 0 0 2-2V8a2 2 0 0 0-2-2h-7.9a2 2 0 0 1-1.69-.9L9.6 3.9A2 2 0 0 0 7.93 3H4a2 2 0 0 0-2 2v13a2 2 0 0 0 2 2Z"
          />
        </svg>
      </div>
      <div
        class="min-w-0 flex-1"
      >
        <div
          class="flex flex-wrap items-center gap-2"
        >
          <h1
            class="text-2xl font-bold text-slate-900"
          >
            name 1
          </h1>
          <span
            class="inline-flex items-center justify-center rounded-full border px-2 py-0.5 text-xs font-medium w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden [a&]:hover:bg-accent [a&]:hover:text-accent-foreground gap-1 border-green-300 bg-green-50 text-green-700"
            data-slot="badge"
            data-testid="public-badge"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-globe h-3 w-3"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
              <path
                d="M12 2a14.5 14.5 0 0 0 0 20 14.5 14.5 0 0 0 0-20"
              />
              <path
                d="M2 12h20"
              />
            </svg>
            Öffentlich
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;
